--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -27,15 +27,15 @@ body {
     transform: scale(1.1); }
 
 .header {
-  height: 10vh;
-  background-image: linear-gradient(to right, #434343, #000 25%, #000 75%, #434343);
+  height: 8vh;
+  background-image: linear-gradient(to right, #434343, #000 20%, #000 80%, #434343);
   text-align: center; }
   .header .header__logo {
     height: 100%;
     padding: 1.5vh; }
 
 .main-container {
-  height: calc(100vh - 10vh);
+  height: calc(100vh - 8vh);
   background-image: linear-gradient(to bottom, transparent, transparent 80%, #000 90%), url("../img/sfondo1.jpg");
   background-size: cover; }
   .main-container__title {
@@ -73,23 +73,20 @@ body {
     display: inline-block;
     width: 50%;
     height: 50%;
-    margin-bottom: 12%; }
+    margin-bottom: 12%;
+    margin-top: 20%; }
     .main-container__links img {
       float: right;
       margin-left: 70%;
       margin-right: 5%;
       margin-bottom: 1rem;
       display: block;
-      width: 30%;
+      width: 25%;
+      border-radius: 7px;
+      transform: translateX(-6px);
       transition: all .2s; }
       .main-container__links img:hover {
-        transform: scale(1.1); }
-      .main-container__links img:first-child {
-        width: 25%;
-        border-radius: 7px;
-        transform: translateX(-6px); }
-        .main-container__links img:first-child:hover {
-          transform: scale(1.1) translateX(-6px); }
+        transform: scale(1.1) translateX(-6px); }
     .main-container__links__btn {
       float: right;
       margin-left: 25%;
