--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -1,3 +1,8 @@
+@charset "UTF-8";
+/*
+font-family: 'Amatic SC', cursive;
+font-family: 'Open Sans', sans-serif;
+*/
 *,
 *::after,
 *::before {
@@ -29,6 +34,13 @@ body {
     font-weight: bold;
     transform: scale(1.1);
     background-color: #ffffcc; }
+
+.table {
+  text-align: center; }
+  .table th {
+    padding: .4rem 2rem;
+    padding-left: .2rem;
+    text-align: left; }
 
 .header {
   height: 8vh;
@@ -97,3 +109,47 @@ body {
       margin-right: 5%;
       margin-bottom: 1rem;
       display: block; }
+
+.container-hours {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -100;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  text-align: center;
+  opacity: 0;
+  transition: all .5s; }
+  .container-hours--table {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -70%);
+    width: 88%;
+    background-color: #ffffe6;
+    padding: 5vh; }
+    .container-hours--table > * {
+      margin: 2rem auto;
+      font-size: 1.6rem; }
+    .container-hours--table p {
+      font-family: 'Amatic SC', cursive;
+      font-size: 4rem;
+      color: #000;
+      text-transform: uppercase;
+      text-emphasis: bold;
+      font-weight: 700;
+      text-shadow: .3px 5px #f0f0f0; }
+    .container-hours--table .close-table {
+      font-family: 'Open Sans', sans-serif;
+      font-size: 3rem;
+      color: #e62e00;
+      position: absolute;
+      top: .3rem;
+      right: 1.4rem;
+      margin: 0; }
+      .container-hours--table .close-table:hover {
+        color:   #b32400; }
+  .container-hours:target {
+    opacity: 1;
+    z-index: 100; }
